@@ -7,6 +7,7 @@ CONNECTION_ARGS = {}
 #long or short
 CONNECTION_TYPE = 'long'
 STRATEGY = 'threadlocal'
+PK_TYPE = 'int'
 CONNECTIONS = {}
 
 [BINDS]
